<resources>
    <string name="app_name">App News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="for_you">For you</string>
    <string name="sample_judul">Judul Berita Yang Akan Ditampilkan</string>
    <string name="headline">Headline</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="headlines">Headlines</string>
    <string name="indonesia">Indonesia</string>
    <string name="dunia">Dunia</string>
    <string name="teknologi">Teknologi</string>
    <string name="hiburan">Hiburan</string>
    <string name="olahraga">Olahraga</string>
</resources>