<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="category.IndonesiaCategoryFragment">

    <!-- HorizontalScrollView -->
    <HorizontalScrollView
        android:id="@+id/horizontal_navigation_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- LinearLayout inside HorizontalScrollView -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Buttons for categories -->
            <Button
                android:id="@+id/btnCategoryIndonesia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indonesia"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnCategoryDunia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dunia"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnCategoryTeknologi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teknologi"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnCategoryHiburan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiburan"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnCategoryOlahraga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olahraga"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </HorizontalScrollView>

    <!-- RecyclerView untuk menampilkan headline -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewCategoryIndonesia"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_item_indonesia_category" />

</androidx.constraintlayout.widget.ConstraintLayout>