<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CategoryFragment"
    >

    <!-- Guideline Horizontal Bottom-->

    <!-- HorizontalScrollView -->
    <HorizontalScrollView
        android:id="@+id/horizontal_navigation_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- LinearLayout inside HorizontalScrollView -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- Buttons for categories -->
            <Button
                android:id="@+id/btnCategoryIndonesia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indonesia"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnCategoryDunia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dunia"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnCategoryTeknologi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teknologi"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnCategoryHiburan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hiburan"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
            <Button
                android:id="@+id/btnCategoryOlahraga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olahraga"
                android:textColor="@color/black"
                android:elevation="0dp"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_navigation_category"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/fragment_navigation"
            app:layout_constraintTop_toBottomOf="@id/horizontal_navigation_category"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>


<!--<androidx.recyclerview.widget.RecyclerView-->
<!--android:id="@+id/recyclerViewCategory"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--app:layout_constraintTop_toBottomOf="@id/horizontal_navigation_category"-->
<!--tools:layout_editor_absoluteX="0dp">-->

<!--</androidx.recyclerview.widget.RecyclerView>-->

